// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Arrow /> should adopt the "height" prop 1`] = `
.c0 {
  display: inline-block;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  height: 1px;
  margin: -1px 0 0 0 !important;
  -webkit-transform: rotateY(180deg);
  -ms-transform: rotateY(180deg);
  transform: rotateY(180deg);
  z-index: 9;
}

.c0::after {
  content: "" !important;
  display: block !important;
  clear: both !important;
}

@media (min-height:1em) {
  .c0 {
    height: 1em;
  }
}

<svg
  className="c0"
  focusable="false"
  height="1em"
  preserveAspectRatio="xMinYMid meet"
  viewBox="0 0 848 640"
  xmlns="http://www.w3.org/2000/svg"
/>
`;

exports[`<Arrow /> should adopt the "isLeftHanded" prop 1`] = `
.c0 {
  display: inline-block;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  height: 1px;
  margin: -1px 0 0 0 !important;
  -webkit-transform: rotateY(180deg);
  -ms-transform: rotateY(180deg);
  transform: rotateY(180deg);
  z-index: 9;
}

.c0::after {
  content: "" !important;
  display: block !important;
  clear: both !important;
}

@media (min-height:) {
  .c0 {
    height: 100%;
  }
}

<svg
  className="c0"
  focusable="false"
  preserveAspectRatio="xMinYMid meet"
  viewBox="0 0 848 640"
  xmlns="http://www.w3.org/2000/svg"
/>
`;

exports[`<Arrow /> should adopt the "showBreakpoint" prop 1`] = `
.c0 {
  display: inline-block;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  height: 1px;
  margin: -1px 0 0 0 !important;
  -webkit-transform: rotateY(180deg);
  -ms-transform: rotateY(180deg);
  transform: rotateY(180deg);
  z-index: 9;
}

.c0::after {
  content: "" !important;
  display: block !important;
  clear: both !important;
}

@media (min-height:100px) {
  .c0 {
    height: 100%;
  }
}

<svg
  className="c0"
  focusable="false"
  preserveAspectRatio="xMinYMid meet"
  viewBox="0 0 848 640"
  xmlns="http://www.w3.org/2000/svg"
/>
`;

exports[`<Arrow /> should render and match the snapshot 1`] = `
.c0 {
  display: inline-block;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  height: 1px;
  margin: -1px 0 0 0 !important;
  -webkit-transform: rotateY(180deg);
  -ms-transform: rotateY(180deg);
  transform: rotateY(180deg);
  z-index: 9;
}

.c0::after {
  content: "" !important;
  display: block !important;
  clear: both !important;
}

@media (min-height:) {
  .c0 {
    height: 100%;
  }
}

<svg
  className="c0"
  focusable="false"
  preserveAspectRatio="xMinYMid meet"
  viewBox="0 0 848 640"
  xmlns="http://www.w3.org/2000/svg"
/>
`;
